--- a/style.css
+++ b/style.css
@@ -1127,6 +1127,16 @@ footer{
     align-items: center;
     justify-content: center;
 }
+.foot-sub{
+    width: 100%;
+    height: 40vh;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
 .foot-main2 {
     width: 90%;
     height: auto;
